Added the first question

--- a/mll-problems/ch-18.md
+++ b/mll-problems/ch-18.md
@@ -6,9 +6,45 @@ Forward direction: prove $I_A, I_B$ independent $\rightarrow A, B$ independent
 
 If $I_A$ and $I_B$ are independent, this means that $Pr(I_A = c \cap I_B = d) = Pr(I_A = c)Pr(I_B = d), c, d \in \set{0, 1}$
 
-This implies that the probability that event $A$ occurs is independent of the probability that
-event $B$ occurs.
-
 We know that $Pr(I_A = 1) = Pr(A)$, and $Pr(I_A = 0) = Pr(A^{\complement})$
 
-Similarly, $Pr(I_A = 1) = Pr(A)$, and $Pr(I_A = 0) = Pr(A^{\complement})$
+Similarly, $Pr(I_B = 1) = Pr(B)$, and $Pr(I_B = 0) = Pr(B^{\complement})$
+
+If c = d = 1, then the expression
+$Pr(I_A = c \cap I_B = d) = Pr(I_A = c)Pr(I_B = d)$ becomes
+$Pr(A \cap B) = Pr(A)Pr(B)$. Since $Pr(A \cap B) = Pr(A)Pr(B)$, this means that 
+$A$ and $B$ are independent.
+
+Backwards directions: prove $A, B$ independent $\rightarrow I_A, I_B$ independent
+
+If $A$ and $B$ are independent, then that means $Pr(A \cap B) = Pr(A)Pr(B)$.
+
+As a result of this, we also have that $Pr(A^{\complement}B^{\complement}) = Pr(A^{\complement})Pr(B^{\complement})$
+
+We know that for $I_A$, $Pr(I_A = 1) = Pr(A)$ and $Pr(I_A = 0) = Pr(A^{\complement})$
+
+Similarly, for  $I_B$, $Pr(I_B = 1) = Pr(B)$ and $Pr(I_B = 0) = Pr(B^{\complement})$
+
+Therefore, we need to prove that for any combination of $c, d, Pr(I_A = c \cap I_B = d) = Pr(I_A = c)Pr(I_B = d)$
+
+We already know that $Pr(AB) = Pr(A)Pr(B)$ from the premise of the question. We now need to 
+prove that $Pr(A^{\complement}B) = Pr(A^{\complement})Pr(B), Pr(B^{\complement}A) = Pr(B^{\complement})Pr(A)$
+
+I will now prove that $Pr(A^{\complement}B) = Pr(A^{\complement})Pr(B)$
+
+$Pr(A^{\complement}B)  = Pr(A (1 - Pr(B))$
+
+$Pr(A (1 - Pr(B)) = Pr(A) - Pr(AB))$
+
+$Pr(A) - Pr(AB)) = Pr(A) - Pr(A)Pr(B)$ (by the fact of A and B being independent)
+
+$Pr(A) - Pr(A)Pr(B) = Pr(A)(1 - Pr(B))$
+
+By using the fact that $Pr(B^{\complement}) = 1 - Pr(B)$, we can simplify the above expression.
+
+$Pr(A) - Pr(A)Pr(B) = Pr(A)Pr(B^{\complement})$
+
+We have proved that $Pr(A^{\complement}B) = Pr(A^{\complement})Pr(B)$.
+A similar argument can be made to prove that $Pr(B^{\complement}A) = Pr(B^{\complement})Pr(A)$.
+
+## Question two
