Added more to the first question of chapter 18

--- a/mll-problems/ch-18.md
+++ b/mll-problems/ch-18.md
@@ -45,6 +45,21 @@ By using the fact that $Pr(B^{\complement}) = 1 - Pr(B)$, we can simplify the ab
 $Pr(A) - Pr(A)Pr(B) = Pr(A)Pr(B^{\complement})$
 
 We have proved that $Pr(A^{\complement}B) = Pr(A^{\complement})Pr(B)$.
+
 A similar argument can be made to prove that $Pr(B^{\complement}A) = Pr(B^{\complement})Pr(A)$.
+
+$Pr(B^{\complement}A)  = Pr(B (1 - Pr(A))$
+
+$Pr(B (1 - Pr(A)) = Pr(B) - Pr(AB))$
+
+$Pr(B) - Pr(AB)) = Pr(B) - Pr(A)Pr(B)$ (by the fact of A and B being independent)
+
+$Pr(B) - Pr(A)Pr(B) = Pr(B)(1 - Pr(A))$
+
+By using the fact that $Pr(A^{\complement}) = 1 - Pr(A)$, we can simplify the above expression.
+
+$Pr(B)(1 - Pr(A)) = Pr(B)Pr(A^{\complement})$
+
+We have proved that $Pr(A^{\complement}B) = Pr(A^{\complement})Pr(B)$.
 
 ## Question two
