Finished question one

--- a/mll-problems/ch-18.md
+++ b/mll-problems/ch-18.md
@@ -62,4 +62,29 @@ $Pr(B)(1 - Pr(A)) = Pr(B)Pr(A^{\complement})$
 
 We have proved that $Pr(A^{\complement}B) = Pr(A^{\complement})Pr(B)$.
 
+I will now prove that $Pr(B^{\complement}A^{\complement}) = Pr(B^{\complement})Pr(A^{\complement})$
+
+Since $A$ and $B$ are independent, this implies that $Pr(AB) = Pr(A)Pr(B)$.
+
+$Pr({A}^{\complement}{B}^{\complement}) = \overline{Pr(A \cup B)}$ (by De Morgan)
+
+$Pr({A}^{\complement}{B}^{\complement}) = \overline{Pr(A \cup B)}$
+
+Expanding out $\overline{Pr(A \cup B)}$, we obtain $\overline{Pr(A) + Pr(B) - Pr(A \cap B)}$,
+which is equivalent to  $1 - Pr(A) - Pr(B) + Pr(A \cap B)$.
+
+We now have that
+$Pr({A}^{\complement}{B}^{\complement})  = 1 - Pr(A) - Pr(B) + Pr(A \cap B)$
+
+We can rewrite the expression as
+$Pr({A}^{\complement}{B}^{\complement})  = (1 - Pr(A))(1 - Pr(B))$, which is
+equivalent to  
+$Pr({A}^{\complement}{B}^{\complement})  = Pr({A}^{\complement})Pr({B}^{\complement})$.
+
+The above statement proves that $A$ and $B$ being independent implies the
+independence of ${A}^{\complement}$ and ${B}^{\complement}$.
+
+
+Since I have shown that for any combination of $c, d, Pr(I_A = c \cap I_B = d) = Pr(I_A = c)Pr(I_B = d)$,
+this implies that $A$ and $B$ being independent implies that $I_A$ and $I_B$ are independent.
 ## Question two
