Added question four

--- a/mll-problems/ch-18.md
+++ b/mll-problems/ch-18.md
@@ -88,3 +88,33 @@ independence of ${A}^{\complement}$ and ${B}^{\complement}$.
 Since I have shown that for any combination of $c, d, Pr(I_A = c \cap I_B = d) = Pr(I_A = c)Pr(I_B = d)$,
 this implies that $A$ and $B$ being independent implies that $I_A$ and $I_B$ are independent.
 ## Question two
+
+## Question four
+Suppose R, S, and T be mutually independent random variables on the same probability 
+space with uniform distribution on the range [1, 2, 3]
+Let $M = max{R, S, T}$. Compute the values of the probability density function,
+$PDF_M$ , of M 
+
+Since $R, S$ and $T$ are uniformly distributed over [1, 2, 3], this means that 
+$\forall Q \in \set{R, S, T}, $Pr(Q = 1) = Pr(Q = 2) = Pr(Q = 3) = \frac{1}{3}$
+
+Since $R, S$ and $T$ are mutually independent, this means that $Pr(R = a \cap S = b \cap T = c)$
+= $Pr(R = a)Pr(S = b)Pr(T = c), a, b, c \in \set{1, 2, 3}$.
+
+This means that for any sequence within $\set{1, 2, 3}^3$, the probability of obtaining that 
+sequence is ${\frac{1}{3}}^3 = \frac{1}{27}$.
+
+For calculating $PDF_M$, I must find the values $Pr(M = 1), Pr(M = 2)$, and $Pr(M = 3)$.
+
+For calculating $Pr(M = 1)$, I must find the probability of obtaining a sequence where the 
+maximum value is 1. There is only one such possible sequence, being (1, 1, 1). 
+As a consequence of this, $Pr(M = 1) = \frac{1}{27}$.
+
+For calculating $Pr(M = 2)$, I must find the probability of obtaining a sequence where the
+maximum value is 2. This can be done by selecting one, two, or three of the random variables 
+to hold the value 2. 
+We can do this in 3 + 3 + 1 = 7 ways. As a result of this,  $Pr(M = 2) = \frac{7}{27}$.
+
+For calculating $Pr(M = 3)$, I can use the following relation: 1 = $Pr(M = 1) + Pr(M = 3) + Pr(M = 3)$.
+I can rearrange the terms to obtain $Pr(M = 3)$ obtaining $1 - Pr(M = 1) - Pr(M = 2)$. Doing this, 
+my value of $Pr(M = 3)$ is $\frac{19}{27}$.
