Added question nine

--- a/mll-problems/ch-18.md
+++ b/mll-problems/ch-18.md
@@ -118,3 +118,22 @@ We can do this in 3 + 3 + 1 = 7 ways. As a result of this,  $Pr(M = 2) = \frac{7
 For calculating $Pr(M = 3)$, I can use the following relation: 1 = $Pr(M = 1) + Pr(M = 3) + Pr(M = 3)$.
 I can rearrange the terms to obtain $Pr(M = 3)$ obtaining $1 - Pr(M = 1) - Pr(M = 2)$. Doing this, 
 my value of $Pr(M = 3)$ is $\frac{19}{27}$.
+
+## Question nine
+
+### What is the probability that Bruce breaks exactly 2 out of the 5 boards that are placed before him?
+
+Since the probability of breaking the boards is mutually independent and the probability of 
+breaking a board remains constant, we can model the probability of breaking x boards using 
+a binomial distribution.
+
+Let $Pr(X)$ denote the event that Bruce breaks $X$ boards.
+
+$Pr(X) = \binom{5}{X}{0.8}^X{0.2)^{5 - X}$
+
+For $Pr(2)$, we obtain $\binom{5}{2}{0.8}^2{0.2}^3$
+
+### What is the probability that Bruce breaks at most 3 out of the 5 boards that are placed before him?
+I am asked to obtain $Pr(X \le 3)$. To do this, I can take the complement of $Pr(X \ge 4)$.
+
+To calculate $Pr(X \ge 4)$, I sum up the values of $Pr(X = 4)$ and $Pr(X = 5)$
