--- a/mll-problems/ch-17.md
+++ b/mll-problems/ch-17.md
@@ -68,6 +68,44 @@ one which results in the person being shot on the second attempt.
 Therefore, the probability becomes $\frac{1}{6}\frac{3}{2} = \frac{1}{4}$.
 
 
+## Question 17.5 
+There are two decks of cards. One is complete, but the other is missing the Ace
+of spades. Suppose you pick one of the two decks with equal probability and then
+select a card from that deck uniformly at random. What is the probability that you
+picked the complete deck, given that you selected the eight of hearts? Use the
+four-step method and a tree diagram.
 
+Let $D_c$ and $D_{ic}$ be the probabilities of drawing either the complete deck or incomplete deck.
+$Pr(D_c) = Pr(D_{ic}) = \frac{1}{2}$.
 
+Let $CP$ be the event of selecting a specific card in the deck.
+$Pr(CP) = Pr(CP | D_c)Pr(D_C) + Pr(CP|D_{ic})Pr(D_{ic})$.
+
+$Pr(CP) = \frac{1}{52}\frac{1}{2} + \frac{1}{51}\frac{1}{2}$.
+
+Let H be the event that the eight of hearts was selected.
+
+Calculate the following: $Pr(D_c | H)$.
+
+I will draw out the tree diagram below:
+
+```mermaid
+flowchart LR
+    A[start] --> |1/2| B[Complete deck is picked]
+    A --> |1/2| C[incomplete deck is picked]
+    B --> |1/52| D[Eight of hearts is picked]
+     B --> |51/52| E[Eight of hearts is not picked]
+     C --> |1/51| F[Eight of hearts is picked]
+      C --> |50/51| G[Eight of hearts is not picked]
+```
+
+Using the diagram, I will obtain the value of
+$Pr(D_c | H)$.
+
+Expanding the expression out, I obtain $\frac{Pr(D_c \cap H)}{Pr(H)}$
+
+Using the diagram, I see the values of $Pr(D_c \cap H)$ and $Pr(H)$ are $\frac{1}{104}$ 
+and $\frac{1}{104} + \frac{1}{102}$.
+
+Using these values, $Pr(D_c | H)$ evaluates to $\frac{102}{206} = \frac{51}{103}$
 
