Added question seventeen

--- a/mll-problems/ch-17.md
+++ b/mll-problems/ch-17.md
@@ -109,3 +109,52 @@ and $\frac{1}{104} + \frac{1}{102}$.
 
 Using these values, $Pr(D_c | H)$ evaluates to $\frac{102}{206} = \frac{51}{103}$
 
+
+## Question 17
+
+A flip of Coin 1 is x times as likely to come up Heads as a flip of Coin 2. A
+biased random choice of one of these coins will be made, where the probability of
+choosing Coin 1 is w times that of Coin 2.
+
+### Restate the information above as equations between conditional probabilities involving the events C1 WWD Coin 1 was chosen; C 2 WWD Coin 2 was chosen; H WWD the chosen coin came up Heads: 
+
+$Pr(C2) = p$
+
+$Pr(C1) = wp$
+
+$Pr(H | C2) = q$
+
+$Pr(H | C1) = xq$.
+
+### State an inequality involving conditional probabilities of the above events that formalizes the assertion “Given that the chosen coin came up Heads, the chosen coin is more likely to have been Coin 1 than Coin 2.” 
+$Pr(C1 | H) > Pr(C2 | H)$
+Ask professor if more likely includes $\ge$.
+
+
+### Prove that, given that the chosen coin came up Heads, the chosen coin is more likely to have been Coin 1 than Coin 2 iff wx > 1
+
+#### Prove forward direction
+
+$Pr(H) = Pr(H| C1)Pr(C1) + Pr(H| C2)Pr(C2)$
+
+$Pr(H) = xqwp + qp$
+
+$Pr(H) = qp(xw + 1)$
+
+If the probability that heads appears on Coin 1 is greater than Coin 2, then this 
+means that xqwp > qp, which is equivalent is xw > 1 after factoring out qp.
+
+#### Prove backwards direction
+
+$Pr(H) = qp(xw + 1)$
+
+For $Pr(H)$ to be a valid probability, $qp \le \frac{1}{xw + 1}$
+
+Given that xw > 1, the above expression becomes
+$qp < \frac{1}{1 + 1} = qp < \frac{1}{2}$
+
+Since $qp < \frac{1}{2}$ and $xw > 1$, we know that $xwqp > qp * 1$.
+Considering that qp represents the probability of obtaining a heads on coin two and 
+xwqp represents the probability of obtaining a head with coin 1, we can say that the 
+probability of obtaining a head with coin 1 is higher than the probability of 
+obtaining a heads on coin two.
