--- a/mll-problems/ch-17.md
+++ b/mll-problems/ch-17.md
@@ -158,3 +158,45 @@ Considering that qp represents the probability of obtaining a heads on coin two 
 xwqp represents the probability of obtaining a head with coin 1, we can say that the 
 probability of obtaining a head with coin 1 is higher than the probability of 
 obtaining a heads on coin two.
+
+## Question 18
+
+### Part 1
+
+$Pr(B) = \frac{1}{1000}$
+
+$Pr(Y | B) = 0.99$
+
+$Pr(\bar{Y} | \bar{B}) = 0.97$
+
+### Part 2
+
+$Pr(\bar{B}) = 1 - Pr(B)$
+
+$Pr(Y | \bar{B})$ 
+
+$Pr(Y) = Pr(Y| \bar{B})Pr(\bar{B}) + Pr(Y| B)Pr(B)$
+
+$Pr(Y | \bar{B}) = \frac{Pr(Y) - Pr(Y| B)Pr(B)}{Pr(\bar{B})}$
+
+Ask professor about how to do this. 
+
+### Part 3
+$Pr(Y) = Pr(Y| \bar{B})Pr(\bar{B}) + Pr(Y| B)Pr(B)$
+
+### Write a formula solely in terms of the expressions given in part (a) for the probability that a person will suffer Beaver Fever given that Doctor Meyer says they will. Then calculate the numerical value of the formula.
+
+$Pr(B | Y) = \frac{Pr(B \cap Y}{Pr(Y)}$
+
+$Pr(B | Y) = \frac{Pr(Y | B)Pr(B)}{Pr(Y)}$
+
+We know that $Pr(Y |B)Pr(B) = 0.99 * 0.001 = 0.00099$
+
+In order to calculate $Pr(Y)$, we must expand it out using the Law of Total Probability.
+
+$Pr(Y) = Pr(Y| \bar{B})Pr(\bar{B}) + Pr(Y| B)Pr(B)$
+
+Using the fact that $Pr(Y | \bar{B}) = 1 - Pr(\bar{Y} | \bar{B})$, $Pr(\bar{B}) = \frac{999}{1000}$,
+$Pr(Y | B) = 0.99, Pr(B) = \frac{1}{1000}$, the above expression evaluates to
+
+$0.03 * \frac{999}{1000} + 0.99 * \frac{1}{1000}$
